alteração no nome do alt

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 
 <div class="menu">
-    <img src="./assets/thumb1.png" class="button-menu" alt="copo_verde"
+    <img src="./assets/thumb1.png" class="button-menu" alt="copo_green"
         onclick="trocaImagem('./assets/thumb1.png'); trocaCor('#017143')">
     <img src="./assets/thumb2.png" class="button-menu" alt="copo_rosa"
         onclick="trocaImagem('./assets/thumb2.png'); trocaCor('#eb7495')">
