Alteração no button.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <h2>It's not just coffe<br>It's<span>Starbucks</span></h2>
             <p>Starbucks expande programa Global Greener Stores e anuncia as primeiras 18 lojas certificadas no Brasil
             </p>
-            <a href="https://www.starbucks.com.br/menu-list"><button>Saboreie Mais Aqui!</button></a>
+            <button onclick="window.open('https://www.starbucks.com.br/menu-list', '_blank')">Saboreie Mais
+                Aqui!</button>
 
 
         </div>
